[package]
name = "igraph-sys"
version = "0.0.0"
edition = "2021"
links = "igraph"
description = "Rust bindings to igraph c library"
categories = ["api-bindings"]

license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]


[build-dependencies]
bindgen = "0.60"
cmake = "0.1"
cc = "1"